# CeyeHao

./: .gitignore  MANIFEST.in  README.md  install.py  launch_gui.py  plots.ipynb  pyproject.toml  requirements.txt  search.py  search_ga.py  setup.py  test_package.py  train.py
ceyehao/: __init__.py  cli.py  search.py  train.py
ceyehao/config/: config.py  template.yml
ceyehao/data/: dataset.py  transform.py
ceyehao/gui/: app.py
ceyehao/models/: archs.py  unetpp.py
ceyehao/models/gvtn/: attention_layer.py  attention_module.py  basic_ops.py  network.py  resnet_module.py
ceyehao/tools/: acc_metrics.py  eval.py  ga.py  infer.py  inverse_design.py  loss_functions.py  trainer.py
ceyehao/utils/: data_generate.py  data_process.py  io.py  microfluidics.py  visualization.py
config/: config.py  gvtn_cfg.py  template.yml  template_cfg.pkl
data/: transform.py
gui/: app.py  mainwindow.ui  mplcanvas.py  ui_mainwindow.py
models/: nn_modules.py
models/gvtn/: gvtn_loss.py
tools/: acc_metrics.py  ga.py  infer.py  inverse_design.py  loss_functions.py  scheduler.py  trainer.py
utils/: data_generate.py  data_process.py  io.py  utils.py  visualization.py
